# Ether

./: ARCHITECTURE.md  CLIENT.md  CMakeLists.txt  README.md  ROADMAP.md  SERVER.md
docs/: ALLOCATOR.md  PROTOCOL.md
examples/: echo_server.c  simple_client.c
include/ether/: client.h  ether.h  protocol.h
src/: allocator.c  client.c  protocol.c  server.c
tests/: test_allocator.c  test_pointer.c  test_protocol.c
